Implement get order by id
